@@ -1,3 +1,8 @@
+1999-02-26  Hippo
+
+	* fvwm/placement.c: fixed wandering on restart/recapture caused by
+	old_bw being ignored.
+
 1999-02-25  Paul D. Smith  <psmith@gnu.org>
 
 	* configure.in: Updated for 2.2.1.
